# wakatime-dev-insights

./: .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose-dev.yml  docker-compose.yml  main.py  pyproject.toml  pytest.ini
core/: api.py  config.py  db.py  mail.py  models.py
docs/: API_GUIDE.md
src/api/: main.py  routes.py  schemas.py  security.py
src/orchestrator/: orchestrator.py  repository.py  schema.py
templates/: insights.html
tests/: conftest.py  test_backend_api.py  test_db.py  test_orchestrator.py  test_wakatime_api.py
